Fix triangle z-index.

--- a/src/styles/components/triangle.css
+++ b/src/styles/components/triangle.css
@@ -5,7 +5,7 @@
     right: 0;
     top: 0;
     transform: rotate(0);
-    z-index: 9999;
+    z-index: 10;
 
     &::before {
         border: 50px solid;
